--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>E-BusTicketing System</title>
-	<link rel="stylesheet" type="text/css" href="file:///G://ProjectUi/CSS/default.css">
+	<link rel="stylesheet" type="text/css" href="CSS/default.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 
 </head>
